# voice_recovery_circuit

./: .gitignore  Cargo.toml  README.md  pyproject.toml
app/: .gitignore  package-lock.json  package.json
app/contracts/: Verifier.sol  VoiceKeyRecover.sol
app/src/: App.js  RecordButton.jsx  RegisterStatus.jsx  countdown.jsx  util.js
app/src/contracts/ENS.sol/: ENS.json  ENSNamehash.json  Resolver.json
app/src/contracts/Verifier.sol/: Verifier.json
app/src/contracts/VoiceKeyRecover.sol/: VoiceKeyRecover.json
app/test_data/: verifier_code.txt
backend/: .gitignore  app.py  convert.py  utils.py
backend/machine_learning/: speaker_recognition.py
backend/machine_learning/RawNet3/: infererence.py
backend/machine_learning/RawNet3/models/: RawNet3.py
eth_voice_recovery/: Cargo.toml
eth_voice_recovery/configs/: agg_circuit.config  test1_circuit.config
eth_voice_recovery/src/: fuzzy.rs  helper.rs  lib.rs  poseidon_circuit.rs
hardhat/: hardhat.config.ts  package-lock.json  package.json
hardhat/contracts/: DemoContractWallet.sol  DummyZKPVerifier.sol  ENS.sol  ENSDeps.sol  IZKPSnarkVerifier.sol  Verifier.sol  VerifierInternal.sol  VerifierWrapper.sol  VoiceKeyRecover.sol
hardhat/scripts/: deploy.ts
hardhat/test/: DemoContractWallet.ts  VoiceKeyRecover.ts
hardhat/test_data/: evm_proof.hex  evm_public_input.json  public_input.json
src/: fuzzy.rs  lib.rs
voice_recovery_python/: Cargo.toml  pyproject.toml
voice_recovery_python/.env/: pyvenv.cfg
voice_recovery_python/src/: lib.rs
