[tool.poetry]
name = "voice-recovery-circuit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "voice_recovery_circuit"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-cors = "^3.0.10"
numpy = "^1.24.2"
torch = "^2.0.0"
tqdm = "^4.65.0"
soundfile = "^0.12.1"
asteroid-filterbanks = "^0.4.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
