[package]
name = "voice_recovery_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "voice_recovery_python"
crate-type = ["cdylib"]

[dependencies]
pyo3-log = { version = "0.8.1" }
pyo3 = "0.18.1"
eth-voice-recovery = { path = "../eth_voice_recovery" }
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git" }
hex = "0.4.3"
